Tue May 05 02:01:13 UTC 2009 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c, man/tripplite_usb.8, data/driver.list: update list
   of units tested with tripplite_usb

Mon May 04 08:11:01 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/apcsmart.[ch]: add support for older SmartUPS, which do not respond
   to the ^Z, a or b commands (used to inquire the supported data)
   (patch from Thomas Juerges)

Thu Apr 30 21:20:42 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: add Apollo 1000A and 1000F compatibility with genericups
   upstype=4 (reported by mvochin)

Thu Apr 23 12:46:12 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - man/snmp-ups.8: remove the EXPERIMENTAL section to the profit of a LIMITATION
   section.

Fri Apr 17 13:26:21 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add UPSonic DS-800 compatibility with megatec_usb
   (reported by Nick Jenkins)

Sun Mar 29 20:59:09 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml.c: Either do a quick poll or a complete poll (not both).

Sun Mar 29 20:21:19 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsimage.c, clients/upsstats.c:
   - Add ups.temperature, ambient.temperature and ambient.humidity (sorry folks,
     Celsius only for now).
   - The graph for the battery.charge now honors battery.charge.low for the red zone.
   - The number of minor dashes for the battery.charge is reduced.
   - Value on the scales is now right aligned. Display of negative values is corrected.
 * conf/upsstats-single.html.sample:
   - If ambient.(temperature|humidity) is supported, an 'Ambient' column is added to
     display the bars for them.

Thu Mar 26 20:04:53 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 * drivers/netxml.[ch], drivers/mge-xml.c:
   - Allow multiple entry points for the initial XML page that is loaded
   - Use different XML pages for quick and full status updates (the latter